wilug picture gallary

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         learn javascript and python programming. <font color ="blue" face = Algerian>I would love<br /> to pursue a
         carear in cyber security.</font>
     </h3>
+    <a href="twitter.come/wilugkaykay">wilug twitter handle</a>
 </body>
 <script src= "./wilug.js"></script>
 </html>    
