--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
         I am in love with coding, so the thing i love doing so much became even more <br /> enjoyable. I intend to
         learn javascript and python programming. <font color ="blue" face = Algerian>I would love<br /> to pursue a
         carear in cyber security.</font>
-    </h3>
-    <a href="twitter.come/wilugkaykay">wilug twitter handle</a>
+    </h3><br />
+    <a href="twitter.come/@wilugkaykay">wilug twitter handle</a>
 </body>
 <script src= "./wilug.js"></script>
 </html>    
