--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         learn javascript and python programming. <font color ="blue" face = Algerian>I would love<br /> to pursue a
         carear in cyber security.</font>
     </h3><br />
-    <a href="twitter.come/@wilugkaykay">wilug twitter handle</a>
+    <a href="twitter.come/@wilugkaykay">wilugkay twitter handle</a>
 </body>
 <script src= "./wilug.js"></script>
 </html>    
